# whisper-client

./: pyproject.toml
docs/: Makefile  api.rst  conf.py  index.rst
mwhisper/: __init__.py  __version__.py  audio.py  audio_config.py  cli.py  config.py  main.py  pred_instr.py  processing.py  transcribe.py
mwhisper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mwhisper/agents/: actor.py  agent.py  config.py  fsm.py  instruct_agent.py  speaker_agent.py  utils.py  whisper_agent.py
